<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_jamaah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/poster_film" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tahun_terbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                tools:text="@string/tahun_terbit"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/tv_judul_film"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/judul_film"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_genre_film"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/genre_film"/>

                <Space
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_text"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_rating_film"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/rating_film"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
