<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:label="@null">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_dynamic_primary50"
                android:label="@null"/>
        </FrameLayout>


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary50"
            android:label="@null"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar2"
                    android:layout_width="wrap_content"
                    android:label="@null"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_back" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_below="@id/topbar"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="346dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/poster_film" />

            <TextView
                android:id="@+id/textViewJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_film"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_film"
                    android:textSize="16sp"
                    android:lineSpacingExtra="4dp"/>

                <Space
                    android:layout_width="9dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_text"
                    android:textSize="16sp"
                    android:lineSpacingExtra="4dp"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_film"
                    android:textSize="16sp"
                    android:lineSpacingExtra="4dp"/>


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahun_terbit"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewTahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahun_terbit"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:lineSpacingExtra="4dp"/>

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_notfav"

            app:layout_anchorGravity="bottom|right|end" />

    </RelativeLayout>


